// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<BulletText /> > should match snapshot for custom bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuki sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_gap_3_mobile__onxwjuei sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_minWidth_fit-content_mobile__onxwjue6 sprinkles_position_relative_mobile__onxwju9m"
    data-od-component="inline"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_position_relative_mobile__onxwju9m sprinkles_flexShrink_0_mobile__onxwjul6"
      >
        <span>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q"
          >
            <svg
              aria-hidden="true"
              class="sprinkles_display_block_mobile__onxwju7q sprinkles_width_full_mobile__onxwjuda sprinkles_height_full_mobile__onxwjubq"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_flexGrow_1_mobile__onxwjul2"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for default bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuki sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_gap_3_mobile__onxwjuei sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_minWidth_fit-content_mobile__onxwjue6 sprinkles_position_relative_mobile__onxwju9m"
    data-od-component="inline"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_pill__onxwju8 sprinkles_position_relative_mobile__onxwju9m sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 BulletText_primaryText__1o8gcm93"
        >
          •
        </span>
      </div>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_flexGrow_1_mobile__onxwjul2"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for ordered bullet text 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuki sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_gap_3_mobile__onxwjuei sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_minWidth_fit-content_mobile__onxwjue6 sprinkles_position_relative_mobile__onxwju9m"
    data-od-component="inline"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_pill__onxwju8 sprinkles_position_relative_mobile__onxwju9m sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 BulletText_primaryText__1o8gcm93"
        >
          ?
        </span>
      </div>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_flexGrow_1_mobile__onxwjul2"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for primary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuki sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_gap_3_mobile__onxwjuei sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_minWidth_fit-content_mobile__onxwjue6 sprinkles_position_relative_mobile__onxwju9m"
    data-od-component="inline"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_pill__onxwju8 sprinkles_position_relative_mobile__onxwju9m sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia BulletText_bullet__1o8gcm90 BulletText_primary__1o8gcm91"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 BulletText_primaryText__1o8gcm93"
        >
          ?
        </span>
      </div>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_flexGrow_1_mobile__onxwjul2"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<BulletText /> > should match snapshot for secondary bullet text with custom bullet character 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_flexDirection_row_mobile__onxwjuki sprinkles_flexWrap_nowrap_mobile__onxwjule sprinkles_gap_3_mobile__onxwjuei sprinkles_justifyContent_flex-start_mobile__onxwjui6 sprinkles_minWidth_fit-content_mobile__onxwjue6 sprinkles_position_relative_mobile__onxwju9m"
    data-od-component="inline"
  >
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_borderRadius_pill__onxwju8 sprinkles_position_relative_mobile__onxwju9m sprinkles_flexShrink_0_mobile__onxwjul6 sprinkles_display_flex_mobile__onxwju7y sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_justifyContent_center_mobile__onxwjuia BulletText_bullet__1o8gcm90 BulletText_secondary__1o8gcm92"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 BulletText_secondaryText__1o8gcm94"
        >
          ?
        </span>
      </div>
    </div>
    <div
      class="reset_block__1oah0224 sprinkles_alignItems_center_mobile__onxwjuhq sprinkles_display_flex_mobile__onxwju7y sprinkles_gap_3_mobile__onxwjuei sprinkles_flexWrap_nowrap_mobile__onxwjule"
    >
      <div
        class="reset_block__1oah0224 sprinkles_flexGrow_1_mobile__onxwjul2"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju7q useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74"
        >
          Hello World!
        </span>
      </div>
    </div>
  </div>
</div>
`;
